--- a/make_exe/Makefile
+++ b/make_exe/Makefile
@@ -4,9 +4,11 @@ LDFLAGS = -lm
 
 all : test
 
-test :  src/test_classe_dot.o src/Dot.o src/Items.o src/Porte.o src/Porte_1.o src/Porte_2.o src/Not.o src/And2.o src/Or2.o
+test :  ../src/test_classe_items.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o
 	g++ -o $@ $^ $(LDFLAGS)
 
+test2 :../src/test_classe_schema.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
+	g++ -o $@ $^ $(LDFLAGS)
 
 
 %.o:%.cpp
@@ -14,4 +16,4 @@ test :  src/test_classe_dot.o src/Dot.o src/Items.o src/Porte.o src/Porte_1.o sr
 
 
 clean:
-	rm -f *.o src/*.o *~ test
+	rm -f *.o ../src/*.o *~ test
