--- a/make_exe/Makefile
+++ b/make_exe/Makefile
@@ -10,11 +10,11 @@ test :   ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Port
 test2 :../src/test_classe_schema.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
 	g++ -o $@ $^ $(LDFLAGS)
 
-test3 :../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
+test3 :../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/dot.o
 	g++ -o $@ $^ $(LDFLAGS)
 
 
-test4 : ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/Simulateur.o
+test4 : ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o 
 	g++ -o $@ $^ $(LDFLAGS)
 
 
@@ -23,4 +23,4 @@ test4 : ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte
 
 
 clean:
-	rm -f *.o ../src/*.o *~ test2
+	rm -f *.o ../src/*.o *~ test4
