--- a/make_exe/Makefile
+++ b/make_exe/Makefile
@@ -1,8 +1,8 @@
-CFLAGS = -g -lm -Wall
+CFLAGS = -g -lm -Wall -std=c++11
 LDFLAGS = -lm
 
 
-all : test3
+all : test
 
 test :   ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/test_classe_items.o
 	g++ -o $@ $^ $(LDFLAGS)
@@ -10,7 +10,7 @@ test :   ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/
 test2 :../src/test_classe_schema.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
 	g++ -o $@ $^ $(LDFLAGS)
 
-test3 :../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/Dot.o
+test3 : ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/Dot.o ../src/test_classe_dot0.o
 	g++ -o $@ $^ $(LDFLAGS)
 
 test4 : ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o ../src/Simulateur.o
