--- a/make_exe/Makefile
+++ b/make_exe/Makefile
@@ -4,16 +4,16 @@ LDFLAGS = -lm
 
 all : test
 
-test :   ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/test_classe_items.o
+test :   ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Stimuli.cc ../src/Or2.o ../src/test_classe_items.o ../src/Input.o ../src/Output.o
 	g++ -o $@ $^ $(LDFLAGS)
 
-test2 :../src/test_classe_schema.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
+test2 :../src/test_classe_schema.o ../src/Dot.o ../src/Items.o ../src/Porte.o../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
 	g++ -o $@ $^ $(LDFLAGS)
 
 test3 : ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/Dot.o ../src/test_classe_dot0.o
 	g++ -o $@ $^ $(LDFLAGS)
 
-test4 : ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Porte_1.o ../src/Porte_2.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o ../src/Simulateur.o
+test4 : ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o ../src/Simulateur.o
 	g++ -o $@ $^ $(LDFLAGS)
 
 
