--- a/make_exe/Makefile
+++ b/make_exe/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -g -lm -Wall -std=c++11
 LDFLAGS = -lm
 
 
-all : test
+all : test3
 
 test :   ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Stimuli.cc ../src/Or2.o ../src/test_classe_items.o ../src/Input.o ../src/Output.o
 	g++ -o $@ $^ $(LDFLAGS)
@@ -10,7 +10,7 @@ test :   ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Stimuli
 test2 :../src/test_classe_schema.o ../src/Dot.o ../src/Items.o ../src/Porte.o../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o
 	g++ -o $@ $^ $(LDFLAGS)
 
-test3 : ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/Dot.o ../src/test_classe_dot0.o
+test3 : ../src/Dot.o ../src/Stimuli.o ../src/Items.o ../src/Porte.o  ../src/Not.o  ../src/And2.o ../src/Or2.o ../src/Schema.o ../src/Input.o ../src/Output.o ../src/Dot.o ../src/test_classe_schema.o
 	g++ -o $@ $^ $(LDFLAGS)
 
 test4 : ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o ../src/Simulateur.o
