--- a/makefile_Leo/Makefile
+++ b/makefile_Leo/Makefile
@@ -2,12 +2,12 @@ CFLAGS = -g -lm -Wall
 LDFLAGS = -lm
 
 
-all : test1
+all : test2
 
-test1 :  ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Or2.o
+test1 :  ../src/test_classe_dot.o ../src/Dot.o ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Input.o ../src/Output.o
 	g++ -o $@ $^ $(LDFLAGS)
 
-test2 :  ../src/test_classe_stimuli.o ../src/Stimuli.o ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Or2.o
+test2 :  ../src/test_classe_stimuli.o ../src/Stimuli.o ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Input.o ../src/Output.o
 	g++ -o $@ $^ $(LDFLAGS)
 
 %.o:%.cpp
