--- a/make_exe/Makefile
+++ b/make_exe/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -g -lm -Wall -std=c++11
 LDFLAGS = -lm
 
 
-all : test5
+all : test6
 
 test :   ../src/Items.o ../src/Porte.o ../src/Not.o ../src/And2.o ../src/Stimuli.cc ../src/Or2.o ../src/test_classe_items.o ../src/Input.o ../src/Output.o ../src/Xor2.o ../src/Xnor2.o ../src/Nor2.o ../src/Nand2.o
 	g++ -o $@ $^ $(LDFLAGS)
@@ -20,6 +20,8 @@ test4 : ../src/Dot.o ../src/Stimuli.o ../src/Simulateur.o ../src/Items.o ../src/
 test5 : ../src/test_classe_simulateur.o ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o ../src/Simulateur.o ../src/Input.o ../src/Output.o ../src/Stimuli.o ../src/Xor2.o ../src/Xnor2.o ../src/Nor2.o ../src/Nand2.o
 	g++ -o $@ $^ $(LDFLAGS)
 
+test6 : ../src/test_classe_wavedrom.o ../src/Dot.o ../src/Items.o ../src/Porte.o  ../src/Not.o ../src/And2.o ../src/Or2.o ../src/Dot.o ../src/Schema.o ../src/Simulateur.o ../src/Input.o ../src/Output.o ../src/Stimuli.o ../src/Xor2.o ../src/Xnor2.o ../src/Nor2.o ../src/Nand2.o ../src/Wavedrom.o
+		g++ -o $@ $^ $(LDFLAGS)
 
 %.o:%.cpp
 	g++ $(CFLAGS) -c $^
